--- a/house-price-forecast/forcast.ipynb
+++ b/house-price-forecast/forcast.ipynb
@@ -1127,7 +1127,7 @@
    "source": [
     "# 获取二手房总价的范围\n",
     "def get_price_range(price, base = 100):\n",
-    "    return '{0}-{1}'.format(int(price//base)*base, int(price//base)*base + base)\n",
+    "    return '{0}-{1}'.format(int(price//base)*base, int(price//base)*base + base)#python的格式化01为位置索引\n",
     "# 获取二手房面积的范围\n",
     "def get_size_range(size, base = 30):\n",
     "    return '{0}-{1}'.format(int(size//base)*base, int(size//base)*base + base)\n",
