--- a/get-start/pytorch入门.ipynb
+++ b/get-start/pytorch入门.ipynb
@@ -1580,11 +1580,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "80ab4c39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[[0., 0.],\n",
+      "          [0., 0.]],\n",
+      "\n",
+      "         [[0., 0.],\n",
+      "          [0., 0.]],\n",
+      "\n",
+      "         [[0., 0.],\n",
+      "          [0., 0.]]],\n",
+      "\n",
+      "\n",
+      "        [[[0., 0.],\n",
+      "          [0., 0.]],\n",
+      "\n",
+      "         [[0., 0.],\n",
+      "          [0., 0.]],\n",
+      "\n",
+      "         [[0., 0.],\n",
+      "          [0., 0.]]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "print(torch.Tensor(2, 3, 2, 2))"
+   ]
   },
   {
    "cell_type": "code",
@@ -1639,7 +1667,7 @@
   "kernelspec": {
    "display_name": "pytorch-gpu",
    "language": "python",
-   "name": "python3"
+   "name": "pytorch-gpu"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1651,7 +1679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
