--- a/house-price-forecast/forcast.ipynb
+++ b/house-price-forecast/forcast.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +175,7 @@
        "4     东城         精装   90.0  2010  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
        "4      3     丽京花园   2室2厅  613.0   顺义-天竺-首   153  1999"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 98,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
        "4     东城      陶然亭    中海紫御公馆   2室2厅     19  2010   90.0   998.0"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
        "4     顺义       天竺     丽京花园   2室2厅      3  1999   153  613.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +674,7 @@
        "4     东城      崇文门    兴隆都市馨园   1室1厅      7  2004   39.0   420.0"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -797,7 +797,7 @@
        "4     东城      崇文门    兴隆都市馨园   1室1厅      7  2004   39.0   420.0  10.769231"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -810,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -919,7 +919,7 @@
        "5     东城      陶然亭    中海紫御公馆   2室2厅     19  2010   90.0   998.0  11.088889"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 103,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -991,7 +991,7 @@
        "Name: Floor, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 105,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
        "Name: PriceMs, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1045,7 +1045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1113,15 +1113,224 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Region</th>\n",
+       "      <th>District</th>\n",
+       "      <th>Garden</th>\n",
+       "      <th>Layout</th>\n",
+       "      <th>Floor</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>PriceMs</th>\n",
+       "      <th>GroupPrice</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>东城</td>\n",
+       "      <td>灯市口</td>\n",
+       "      <td>锡拉胡同21号院</td>\n",
+       "      <td>3室1厅</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>75.0</td>\n",
+       "      <td>780.0</td>\n",
+       "      <td>10.400000</td>\n",
+       "      <td>700-800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>东城</td>\n",
+       "      <td>东单</td>\n",
+       "      <td>东华门大街</td>\n",
+       "      <td>2室1厅</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>705.0</td>\n",
+       "      <td>11.750000</td>\n",
+       "      <td>700-800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>东城</td>\n",
+       "      <td>崇文门</td>\n",
+       "      <td>新世界中心</td>\n",
+       "      <td>3室1厅</td>\n",
+       "      <td>16</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>6.666667</td>\n",
+       "      <td>1400-1500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>东城</td>\n",
+       "      <td>崇文门</td>\n",
+       "      <td>兴隆都市馨园</td>\n",
+       "      <td>1室1厅</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>420.0</td>\n",
+       "      <td>10.769231</td>\n",
+       "      <td>400-500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>东城</td>\n",
+       "      <td>陶然亭</td>\n",
+       "      <td>中海紫御公馆</td>\n",
+       "      <td>2室2厅</td>\n",
+       "      <td>19</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>90.0</td>\n",
+       "      <td>998.0</td>\n",
+       "      <td>11.088889</td>\n",
+       "      <td>900-1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26644</th>\n",
+       "      <td>海淀</td>\n",
+       "      <td>马连洼</td>\n",
+       "      <td>菊园</td>\n",
+       "      <td>2室1厅</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>430.0</td>\n",
+       "      <td>7.413793</td>\n",
+       "      <td>400-500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26645</th>\n",
+       "      <td>朝阳</td>\n",
+       "      <td>东大桥</td>\n",
+       "      <td>三里屯SOHO公寓</td>\n",
+       "      <td>1室1厅</td>\n",
+       "      <td>28</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>970.0</td>\n",
+       "      <td>8.016529</td>\n",
+       "      <td>900-1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26646</th>\n",
+       "      <td>丰台</td>\n",
+       "      <td>青塔</td>\n",
+       "      <td>青塔西里</td>\n",
+       "      <td>3室1厅</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>97.0</td>\n",
+       "      <td>600.0</td>\n",
+       "      <td>6.185567</td>\n",
+       "      <td>600-700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26647</th>\n",
+       "      <td>房山</td>\n",
+       "      <td>长阳</td>\n",
+       "      <td>中粮京西祥云</td>\n",
+       "      <td>4室2厅</td>\n",
+       "      <td>16</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>708.0</td>\n",
+       "      <td>5.664000</td>\n",
+       "      <td>700-800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26648</th>\n",
+       "      <td>昌平</td>\n",
+       "      <td>北七家</td>\n",
+       "      <td>国瑞熙墅</td>\n",
+       "      <td>5室3厅</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>265.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>3.773585</td>\n",
+       "      <td>1000-1100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>24281 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Region District     Garden Layout  Floor  Year   Size   Price   \n",
+       "0         东城      灯市口   锡拉胡同21号院   3室1厅      6  1988   75.0   780.0  \\\n",
+       "1         东城       东单      东华门大街   2室1厅      6  1988   60.0   705.0   \n",
+       "2         东城      崇文门      新世界中心   3室1厅     16  1996  210.0  1400.0   \n",
+       "3         东城      崇文门     兴隆都市馨园   1室1厅      7  2004   39.0   420.0   \n",
+       "5         东城      陶然亭     中海紫御公馆   2室2厅     19  2010   90.0   998.0   \n",
+       "...      ...      ...        ...    ...    ...   ...    ...     ...   \n",
+       "26644     海淀      马连洼         菊园   2室1厅      6  2004   58.0   430.0   \n",
+       "26645     朝阳      东大桥  三里屯SOHO公寓   1室1厅     28  2010  121.0   970.0   \n",
+       "26646     丰台       青塔       青塔西里   3室1厅      6  2004   97.0   600.0   \n",
+       "26647     房山       长阳     中粮京西祥云   4室2厅     16  2018  125.0   708.0   \n",
+       "26648     昌平      北七家       国瑞熙墅   5室3厅      4  2018  265.0  1000.0   \n",
+       "\n",
+       "         PriceMs GroupPrice  \n",
+       "0      10.400000    700-800  \n",
+       "1      11.750000    700-800  \n",
+       "2       6.666667  1400-1500  \n",
+       "3      10.769231    400-500  \n",
+       "5      11.088889   900-1000  \n",
+       "...          ...        ...  \n",
+       "26644   7.413793    400-500  \n",
+       "26645   8.016529   900-1000  \n",
+       "26646   6.185567    600-700  \n",
+       "26647   5.664000    700-800  \n",
+       "26648   3.773585  1000-1100  \n",
+       "\n",
+       "[24281 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 109,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1134,6 +1343,16 @@
     "\n",
     "# 筛选房屋总价小于1000万的二手房信息进行统计 \\d+表示一到多个数字\n",
     "df['GroupPrice'] = df['Price'].apply(get_price_range)\n",
+    "# 列改名 df.columns = ['地区', '街道', '详细地址', '布局', '层数', '年份', '面积', '价格', '每平方单价', '价格区间']\n",
+    "df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df['GroupPriceSplit'] = df['GroupPrice'].str.extract(r'(\\d+)-\\d+', expand = False)\n",
     "df['GroupPriceSplit'] = df['GroupPriceSplit'].astype('int')\n",
     "\n",
