--- a/get-start/Python工具基础.ipynb
+++ b/get-start/Python工具基础.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "8e1367c5",
    "metadata": {
     "scrolled": true
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "58a1ba6c",
    "metadata": {},
    "outputs": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "id": "969ab97c",
    "metadata": {},
    "outputs": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 5,
    "id": "508bec83",
    "metadata": {},
    "outputs": [
@@ -165,14 +165,14 @@
      "output_type": "stream",
      "text": [
       "从序列中随机挑一个数\n",
-      "4\n",
+      "6\n",
       "2\n",
-      "1\n",
-      "1.1\n",
+      "2\n",
+      "3.2\n",
       "随机生成一个[0,1)范围的实数\n",
-      " 0.5055267952109663\n",
+      " 0.8588736270308568\n",
       "随机一个[0,10)的整数\n",
-      " 2\n",
+      " 5\n",
       "随机一个[2,3)的整数\n",
       " 2\n",
       "随机一个[2,5)的从2开始步长为2的整数\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "ce0f4513",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 7,
    "id": "2483a233",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 8,
    "id": "aa407438",
    "metadata": {},
    "outputs": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 9,
    "id": "409b8e2f",
    "metadata": {},
    "outputs": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 10,
    "id": "a1f1829c",
    "metadata": {},
    "outputs": [
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 11,
    "id": "a94a8b78",
    "metadata": {},
    "outputs": [
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 12,
    "id": "14b58b26",
    "metadata": {},
    "outputs": [
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 13,
    "id": "6eefede9",
    "metadata": {},
    "outputs": [
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "id": "8e086865",
    "metadata": {},
    "outputs": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 15,
    "id": "8f9d646d",
    "metadata": {},
    "outputs": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 16,
    "id": "073b4c39",
    "metadata": {},
    "outputs": [
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 17,
    "id": "8075796e",
    "metadata": {},
    "outputs": [
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 18,
    "id": "0944c0c9",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 19,
    "id": "9e51b0e5",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 20,
    "id": "cfe0d182",
    "metadata": {},
    "outputs": [
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 21,
    "id": "5324a0dd",
    "metadata": {},
    "outputs": [
@@ -620,9 +620,9 @@
       " [4 5]]\n",
       "两个数组的 id() 不同：\n",
       "a 的 id()：\n",
-      "1991529967856\n",
+      "2211302745264\n",
       "b 的 id()：\n",
-      "1991530766480\n",
+      "2211302745360\n",
       "b 的形状：\n",
       "[[0 1 2]\n",
       " [3 4 5]]\n",
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 26,
    "id": "ffa71ae0",
    "metadata": {},
    "outputs": [
@@ -690,14 +690,14 @@
    ],
    "source": [
     "from matplotlib import pyplot as plt \n",
-    "x = np.arange(1, 11)\n",
+    "x = np.arange(1, 11)#从1到10的序列左闭右开\n",
     "print(x)\n",
     "y = 2 * x + 5\n",
-    "plt.title(\"demo title\")\n",
-    "plt.xlabel('x axis caption')\n",
-    "plt.ylabel('y axis caption')\n",
-    "plt.plot(x, y)\n",
-    "plt.show()"
+    "plt.title(\"demo title\")#图片标题\n",
+    "plt.xlabel('x axis caption')#横坐标标签\n",
+    "plt.ylabel('y axis caption')#纵坐标标签\n",
+    "plt.plot(x, y)#画图\n",
+    "plt.show()#展示"
    ]
   },
   {
@@ -723,7 +723,7 @@
     "y =  [12,16,6] \n",
     "x2 =  [6,9,11] \n",
     "y2 =  [6,15,7] \n",
-    "plt.bar(x, y, align =  'center') \n",
+    "plt.bar(x, y, align =  'center') #直方图\n",
     "plt.bar(x2, y2, color =  'g', align =  'center') \n",
     "plt.title('Bar graph') \n",
     "plt.ylabel('Y axis') \n",
@@ -1455,11 +1455,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "843a0eb0",
    "metadata": {},
    "source": [
-    "### pytorch"
+    "### pytorch 加速运算"
    ]
   },
   {
